# intentRecognizer

./: CMakeLists.txt  README.md
include/classifiers/: IntentClassifier.h
include/constants/: RegexConstants.h  StringConstants.h
include/regex/: RegexConstants.h
src/: main.cpp
src/classifiers/: IntentClassifier.cpp
src/constants/: RegexConstants.cpp  StringConstants.cpp
src/regex/: RegexConstants.cpp
tests/classifiers/: IntentClassifierTest.cpp
